Bug 163230 - A non-breaking table cell taller than page does not break across pages
Summary: A non-breaking table cell taller than page does not break across pages
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.3
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2024-10-01 08:32 UTC by Mike Kaganski
Modified: 2025-07-13 09:21 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
A tall non-breaking table cell (9.21 KB, application/vnd.oasis.opendocument.text)
2024-10-01 08:32 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-10-01 08:32:44 UTC
Created attachment 196811 [details]
A tall non-breaking table cell

In the attachment, the table rows are not allowed to break across pages; the first cell is about two pages high. Prior to commit 0c49aa58cfbb81073e34b1d47861a5a1fdd44114 (tdf#161508: add another loop control hack, 2024-06-11), the first row was correctly split across the pages (which must happen in this case, despite the "do not break" row setting - the latter only applies, when the row can fit into a page), and the document had three pages. In current master, the document is shown in two pages, first page ending with a bottom text line half-cut, and the rest of the first cell content isn't shown; the second page only shows the second row data.
Comment 1 Mike Kaganski 2024-10-01 08:51:06 UTC
https://gerrit.libreoffice.org/c/core/+/174310
Comment 2 Commit Notification 2024-10-01 12:38:58 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d5c0b3f93d33ce1e3d320ee74d6b7b5c5d53d176

tdf#163230: make loop control hack more specific

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-10-02 08:12:25 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/b387a283c08a8efcd91e2386db41467435fb9856

tdf#163230: make loop control hack more specific

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.