tdf#163230: make loop control hack more specific

Commit 0c49aa58cfbb81073e34b1d47861a5a1fdd44114 (tdf#161508: add
another loop control hack, 2024-06-11) only checked the frame area
sizes and positions, but ignores the "valid" frags. It turns out,
that these flags also needed when checking the loop condition.

Change-Id: If155f2424b9a02cad6bf6d5c931dfccfb110d4c4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174310
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit d5c0b3f93d33ce1e3d320ee74d6b7b5c5d53d176)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174324
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>